# script-log-WORKMATE

./: .gitignore  README.md  pyproject.toml
script/: cli.py  log_reader.py  main.py  parser.py  report.py
